--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 }
 </script>
 </head>
-<body class="overflow-hidden transition-colors duration-200">
+<body class="overflow-hidden transition-colors duration-200 bg-slate-50 dark:bg-slate-950">
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
